--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,11 @@
 runtime: python27
 api_version: 1
 threadsafe: true
+skip_files:
+- ^poupon-web/node_modules/*?
 
 handlers:
-- url: /
-  static_dir: poupon-web/build
 - url: /.*
+  static_dir: poupon-web/build
+- url: /api/.*
   script: main.app
