--- a/poupon-web/package.json
+++ b/poupon-web/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
+    "json-loader": "^0.5.7",
+    "react": "^15.6.2",
     "react-dom": "^15.6.1",
+    "react-layout-components": "^3.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
