--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,9 @@
-runtime: python27
+runtime: python
+env: flex
+runtime_config:
+  python_version: 3.6
+entrypoint: gunicorn -b :$PORT main:app
+
 api_version: 1
 threadsafe: true
 skip_files:
