--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,4 @@
-runtime: python
-env: flex
-runtime_config:
-  python_version: 3.6
-entrypoint: gunicorn -b :$PORT main:app
-
+runtime: python27
 api_version: 1
 threadsafe: true
 skip_files:
