--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,12 @@ skip_files:
 - ^poupon-web/node_modules/*?
 - ^.git/*?
 
+env_variables:
+    # Replace user, password, database, and instance connection name with the values obtained
+    # when configuring your Cloud SQL instance.
+    SQLALCHEMY_DATABASE_URI: >-
+      postgresql+psycopg2://postgres:downing@/db-test?host=/cloudsql/poupon-181003:us-central1:db-test
+
 handlers:
 - url: /api/.*
   script: main.app
