--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,9 @@
-runtime: python27
+runtime: python
+env: flex
+runtime_config:
+  python_version: 3.6
+entrypoint: gunicorn -b :$PORT main:app
+
 api_version: 1
 threadsafe: true
 skip_files:
@@ -10,6 +15,9 @@ env_variables:
     # when configuring your Cloud SQL instance.
     SQLALCHEMY_DATABASE_URI: >-
       postgresql+psycopg2://postgres:downing@/db-test?host=/cloudsql/poupon-181003:us-central1:db-test
+
+beta_settings:
+    cloud_sql_instances: poupon-181003:us-central1:db-test
 
 handlers:
 - url: /api/.*
