--- a/app.yaml
+++ b/app.yaml
@@ -14,7 +14,7 @@ env_variables:
     # Replace user, password, database, and instance connection name with the values obtained
     # when configuring your Cloud SQL instance.
     SQLALCHEMY_DATABASE_URI: >-
-      postgresql+psycopg2://postgres:downing@/db-test?host=/cloudsql/poupon-181003:us-central1:db-test
+      postgresql+psycopg2://postgres:downing@/postgres?host=/cloudsql/poupon-181003:us-central1:db-test
 
 beta_settings:
     cloud_sql_instances: poupon-181003:us-central1:db-test
