--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,11 @@
 runtime: python
 env: flex
+service: default
 runtime_config:
   python_version: 3.6
 entrypoint: gunicorn -b :$PORT main:app
 
-api_version: 1
+api_version: 2
 threadsafe: true
 skip_files:
 - ^poupon-web/node_modules/*?
@@ -18,17 +19,17 @@ beta_settings:
     cloud_sql_instances: poupon-181003:us-central1:db-test
 
 handlers:
+- url: /api/.*
+  script: main.app
+
 - url: /
   static_files: poupon-web/build/index.html
   upload: poupon-web/build/index.html
 
-- url: /api/.*
-  script: main.app
-
-- url: /(.*\.(.*))
+- url: /(.*\..*)
   static_files: poupon-web/build/\1
-  upload: poupon-web/build/(.*)  
+  upload: poupon-web/build/.*
 
-- url: /(.*)
+- url: /.*
   static_files: poupon-web/build/index.html
   upload: poupon-web/build/index.html
