--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,5 +8,21 @@ ENV VIRTUAL_ENV /env
 ENV PATH /env/bin:$PATH
 ADD requirements.txt /app/
 RUN pip install -r requirements.txt
+
+# misc
+RUN apt-get update
+RUN	apt-get install -y build-essential curl sudo
+
+# gcloud
+RUN curl https://dl.google.com/dl/cloudsdk/release/google-cloud-sdk.tar.gz > /tmp/google-cloud-sdk.tar.gz
+RUN mkdir -p /usr/local/gcloud
+RUN tar -C /usr/local/gcloud -xvf /tmp/google-cloud-sdk.tar.gz
+RUN /usr/local/gcloud/google-cloud-sdk/install.sh
+ENV PATH $PATH:/usr/local/gcloud/google-cloud-sdk/bin
+
+# node
+RUN	curl -sL https://deb.nodesource.com/setup_8.x | bash -
+RUN	apt-get install -y nodejs
+
 ADD . /app/
 CMD bash
