Makefile is a bit more robust about removing old Docker container

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,4 +24,5 @@ ENV PATH $PATH:/usr/local/gcloud/google-cloud-sdk/bin
 RUN	curl -sL https://deb.nodesource.com/setup_8.x | bash -
 RUN	apt-get install -y nodejs
 
+EXPOSE 5000
 CMD bash
