--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ env: flex
 service: default
 runtime_config:
   python_version: 3.6
-entrypoint: gunicorn -b :$PORT main:app
+entrypoint: gunicorn --pythonpath API -b :$PORT main:app
 
 api_version: 2
 threadsafe: true
