--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==6.7
 Flask==0.12.2
 Flask-SQLAlchemy==2.3.2
 Flask-Cors==3.0.3
+flask-jsontools==0.1.1.post0
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
