--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ MarkupSafe==1.0
 psycopg2==2.7.3.1
 six==1.11.0
 SQLAlchemy==1.1.14
+SQLAlchemy-Searchable==0.10.6
 Werkzeug==0.12.2
 gunicorn==19.7.1
