working on search page

--- a/poupon-web/package.json
+++ b/poupon-web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "json-loader": "^0.5.7",
     "react": "^15.6.2",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-layout-components": "^3.0.6",
     "react-router-dom": "^4.2.2",
