--- a/poupon-web/package.json
+++ b/poupon-web/package.json
@@ -7,7 +7,9 @@
     "react": "^15.6.2",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "react-highlighter": "^0.4.2",
     "react-layout-components": "^3.0.6",
+    "react-paginate": "^5.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
